navigation z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ body {
 	font-weight: 500;
 	text-transform: uppercase;
 	letter-spacing: .8rem;
+	z-index: 99;
 }
 
 .navigation__links {
@@ -96,6 +97,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	z-index: 99;
 }
 
 .navigation__links > a {
